@@ -17,7 +17,7 @@ namespace Caliburn.PresentationFramework.ApplicationModel
         /// <value>The presenters.</value>
         public virtual IObservableCollection<IPresenter> Presenters
         {
-            get { return new BindableCollection<IPresenter> {_currentPresenter}; }
+            get { return new BindableCollection<IPresenter> { _currentPresenter }; }
         }
 
         /// <summary>
@@ -28,7 +28,7 @@ namespace Caliburn.PresentationFramework.ApplicationModel
         /// </returns>
         public override bool CanShutdown()
         {
-            if(_currentPresenter != null)
+            if (_currentPresenter != null)
                 return _currentPresenter.CanShutdown();
 
             return true;
@@ -39,11 +39,11 @@ namespace Caliburn.PresentationFramework.ApplicationModel
         /// </summary>
         public override void Initialize()
         {
-            if(!IsInitialized)
+            if (!IsInitialized)
             {
                 OnInitialize();
 
-                if(_currentPresenter != null)
+                if (_currentPresenter != null)
                     _currentPresenter.Initialize();
 
                 IsInitialized = true;
@@ -55,7 +55,7 @@ namespace Caliburn.PresentationFramework.ApplicationModel
         /// </summary>
         public override void Shutdown()
         {
-            if(_currentPresenter != null)
+            if (_currentPresenter != null)
                 _currentPresenter.Shutdown();
 
             OnShutdown();
@@ -66,11 +66,11 @@ namespace Caliburn.PresentationFramework.ApplicationModel
         /// </summary>
         public override void Activate()
         {
-            if(!IsActive)
+            if (!IsActive)
             {
                 OnActivate();
 
-                if(_currentPresenter != null)
+                if (_currentPresenter != null)
                     _currentPresenter.Activate();
 
                 IsActive = true;
@@ -82,11 +82,11 @@ namespace Caliburn.PresentationFramework.ApplicationModel
         /// </summary>
         public override void Deactivate()
         {
-            if(IsActive)
+            if (IsActive)
             {
                 OnDeactivate();
 
-                if(_currentPresenter != null)
+                if (_currentPresenter != null)
                     _currentPresenter.Deactivate();
 
                 IsActive = false;
@@ -105,12 +105,14 @@ namespace Caliburn.PresentationFramework.ApplicationModel
                 _changingThroughProperty = true;
 
                 ShutdownCurrent(
-                    isShutdownSuccess =>{
-                        if(isShutdownSuccess)
+                    isShutdownSuccess =>
+                    {
+                        if (isShutdownSuccess)
                         {
                             Open(
                                 value,
-                                isOpenSuccess =>{
+                                isOpenSuccess =>
+                                {
                                     _changingThroughProperty = false;
                                     NotifyOfPropertyChange("CurrentPresenter");
                                 });
@@ -131,34 +133,33 @@ namespace Caliburn.PresentationFramework.ApplicationModel
         /// <param name="completed">Called when the open action is finished.</param>
         public virtual void Open(IPresenter presenter, Action<bool> completed)
         {
-            if(presenter == null)
+            if (presenter == null)
             {
                 completed(false);
                 return;
             }
 
             Action successfulCompletion =
-                () =>{
+                () =>
+                {
                     var node = presenter as IPresenterNode;
                     if (node != null) node.Parent = this;
 
                     presenter.Initialize();
                     presenter.Activate();
 
-                    _currentPresenter = presenter;
-
-                    if(!_changingThroughProperty)
-                        NotifyOfPropertyChange("CurrentPresenter");
+                    ChangeCurrentPresenterCore(presenter);
 
                     completed(true);
                 };
 
-            if(_currentPresenter != null)
+            if (_currentPresenter != null)
             {
                 CanShutdownPresenter(
                     _currentPresenter,
-                    isSuccess =>{
-                        if(!isSuccess)
+                    isSuccess =>
+                    {
+                        if (!isSuccess)
                         {
                             completed(false);
                             return;
@@ -183,7 +184,7 @@ namespace Caliburn.PresentationFramework.ApplicationModel
         /// <param name="completed">Called when the open action is finished.</param>
         public virtual void Shutdown(IPresenter presenter, Action<bool> completed)
         {
-            if(presenter != _currentPresenter)
+            if (presenter != _currentPresenter)
                 throw new CaliburnException("You cannot shutdown a presenter that is not hosted by this manager.");
 
             ShutdownCurrent(completed);
@@ -195,7 +196,7 @@ namespace Caliburn.PresentationFramework.ApplicationModel
         /// <param name="completed">Called when the shutdown action is finished.</param>
         public virtual void ShutdownCurrent(Action<bool> completed)
         {
-            if(_currentPresenter == null)
+            if (_currentPresenter == null)
             {
                 completed(true);
                 return;
@@ -203,8 +204,9 @@ namespace Caliburn.PresentationFramework.ApplicationModel
 
             CanShutdownPresenter(
                 _currentPresenter,
-                isSuccess =>{
-                    if(!isSuccess)
+                isSuccess =>
+                {
+                    if (!isSuccess)
                     {
                         completed(false);
                         return;
@@ -216,13 +218,22 @@ namespace Caliburn.PresentationFramework.ApplicationModel
                     var node = _currentPresenter as IPresenterNode;
                     if (node != null) node.Parent = null;
 
-                    _currentPresenter = null;
-
-                    if(!_changingThroughProperty)
-                        NotifyOfPropertyChange("CurrentPresenter");
+                    ChangeCurrentPresenterCore(null);
 
                     completed(true);
                 });
+        }
+
+        /// <summary>
+        /// Changes the current presenter.
+        /// </summary>
+        /// <param name="newCurrent">The new current presenter.</param>
+        protected virtual void ChangeCurrentPresenterCore(IPresenter newCurrent)
+        {
+            _currentPresenter = newCurrent;
+
+            if (!_changingThroughProperty)
+                NotifyOfPropertyChange("CurrentPresenter");
         }
 
         /// <summary>
@@ -233,11 +244,11 @@ namespace Caliburn.PresentationFramework.ApplicationModel
         {
             var custom = _currentPresenter as ISupportCustomShutdown;
 
-            if(custom != null)
+            if (custom != null)
             {
                 var childModel = custom.CreateShutdownModel();
 
-                if(childModel != null)
+                if (childModel != null)
                     return new SubordinateContainer(this, childModel);
             }
 
